--- a/main.css
+++ b/main.css
@@ -1,3 +1,27 @@
 body {
   background-color: black;
 }
+
+img {
+  border-radius: 50%;
+  padding: 50px;
+}
+
+#container {
+  text-align: center;
+  color: ivory;
+}
+
+.phone {
+  color: blue;
+  margin-bottom: 20px;
+}
+
+.social {
+  width: 40px;
+  margin-bottom: 40px;
+}
+
+p {
+  margin-bottom: 40px;
+}
